# qbat

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake  common.cpp  common.h  main.cpp  qbat.desktop  qbat_de.ts  settings.cpp
debian/: changelog  control  copyright  rules
gentoo/: qbat-9999-r1.ebuild
res/: qbat.1
src/: batteryicon.cpp  batteryicon.h  constants.h  main.cpp  powermanager.cpp  powermanager.h  qtimermessagebox.cpp  qtimermessagebox.h  settings.h  settingsdialog.ui
